Simplify TopologicalStyleProvider
Signed-off-by: Florian Dupuy <florian.dupuy@rte-france.com>